update project incolto

--- a/DATA/PROJECT/INCOLTO/Incolto_cut_sqlite.ini
+++ b/DATA/PROJECT/INCOLTO/Incolto_cut_sqlite.ini
@@ -2,7 +2,7 @@
 software="CRITERIA1D"
 
 [project]
-name=INCOLTO
+name=INCOLTO_CUT_SQLITE
 db_meteo=./data/weather_observed.db
 db_forecast=./data/weather_forecast.db
 db_crop=./data/crop.db
@@ -15,4 +15,3 @@ firstDate=2019-01-01
 isSeasonalForecast=false
 isShortTermForecast=true
 daysOfForecast=7
-output=./output/incolto_cut_forecast.csv
