--- a/DATA/PROJECT/INCOLTO/Incolto_cut_xml.ini
+++ b/DATA/PROJECT/INCOLTO/Incolto_cut_xml.ini
@@ -2,9 +2,7 @@
 software="CRITERIA1D"
 
 [project]
-name=INCOLTO
-#db_meteo=./data/DBGridXML_ERG5_v2.1.xml
-#GIAS:
+name=INCOLTO_CUT_XML
 db_meteo=./data/DBGridXML_ERG5_v1.xml   
 db_forecast=./data/DBGridXML_ERG5_LamiForecast.xml
 db_crop=./data/crop.db
@@ -14,8 +12,6 @@ db_units=./data/units_cut.db
 
 [forecast]
 firstDate=2019-01-01
-#firstDate=2008-01-01
 isSeasonalForecast=false
 isShortTermForecast=true
 daysOfForecast=7
-output=./output/incolto_cut_forecast.csv
