--- a/DATA/PROJECT/INCOLTO/Incolto_cut_historical_xml.ini
+++ b/DATA/PROJECT/INCOLTO/Incolto_cut_historical_xml.ini
@@ -2,12 +2,12 @@
 software="CRITERIA1D"
 
 [project]
-name=INCOLTO_STORICO
+name=INCOLTO_CUT_STORICO
 db_meteo=./data/DBGridXML_ERG5_v1.xml   
 db_crop=./data/crop.db
 db_soil=./data/soil_ER_2002.db
 db_units=./data/units_cut.db
-db_output=./output/incolto_cut_historical.db
+db_output=./output/incolto_cut_storico.db
 
 [forecast]
 firstDate=2001-01-01
