--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -15,4 +15,8 @@ UCM=./UCM/UCM.shp
 field_list=./data/nitratiToShape.csv
 
 [aggregation]
-
+aggregation_shape=./COMUNI/Comuni.shp
+aggregation_list=nitratiAggregation.csv
+aggregation_step=30
+aggregation_output=./output/nitrati_comuni
+add_date_to_filename = false
