--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -18,5 +18,5 @@ field_list=./data/nitratiToShape.csv
 aggregation_shape=./COMUNI/Comuni.shp
 aggregation_list=nitratiAggregation.csv
 aggregation_step=30
-aggregation_output=./output/nitrati_comuni
+aggregation_output=./output/nitratiAggr.csv
 add_date_to_filename = false
