--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -15,7 +15,7 @@ UCM=./UCM/UCM.shp
 field_list=./data/nitratiToShape.csv
 
 [aggregation]
-aggregation_shape=./COMUNI/Comuni.shp
+aggregation_shape=./data/COMUNI/Comuni.shp
 aggregation_list=nitratiAggregation.csv
 aggregation_step=30
 aggregation_output=./output/nitratiAggr.csv
