--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -11,12 +11,12 @@ csv_output=./output/nitrati
 add_date_to_filename = true
 
 [shapefile]
-UCM=./UCM/UCM.shp
+UCM=./SHAPE/UCM/UCM.shp
 field_list=./data/nitratiToShape.csv
 
 [aggregation]
-aggregation_shape=./data/COMUNI/Comuni.shp
+aggregation_shape=./SHAPE/ZONE_ALLERTA/ZoneAllerta_2017.shp
 aggregation_list=nitratiAggregation.csv
-aggregation_step=30
+aggregation_cellsize=30
 aggregation_output=./output/nitratiAggr.csv
 add_date_to_filename = false
