--- a/DATA/PROJECT/INCOLTO/bollAgro_cut.ini
+++ b/DATA/PROJECT/INCOLTO/bollAgro_cut.ini
@@ -11,5 +11,5 @@ csv_output=./output/bollettino
 add_date_to_filename = true
 
 [shapefile]
-UCM=./UCM_cut/UCM_cut.shp
+UCM=.SHAPE/UCM_cut/UCM_cut.shp
 field_list=./data/bollettinoToShape.csv
