--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -17,6 +17,6 @@ field_list=./data/nitratiToShape.csv
 [aggregation]
 aggregation_shape=./SHAPE/ZONE_ALLERTA/ZoneAllerta_2017.shp
 aggregation_list=nitratiAggregation.csv
-aggregation_cellsize=30
+aggregation_cellsize=100
 aggregation_output=./output/nitratiAggr.csv
 add_date_to_filename = false
