add shape field

--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -16,6 +16,7 @@ field_list=./data/nitratiToShape.csv
 
 [aggregation]
 aggregation_shape=./SHAPE/ZONE_ALLERTA/ZoneAllerta_2017.shp
+shape_field=NOME
 aggregation_list=nitratiAggregation.csv
 aggregation_cellsize=100
 aggregation_output=./output/nitratiAggr.csv
