--- a/DATA/PROJECT/INCOLTO/bollAgro_cut.ini
+++ b/DATA/PROJECT/INCOLTO/bollAgro_cut.ini
@@ -1,6 +1,6 @@
 [project]
 name=BOLLAGRO_CUT
-db_units=./data/units_cut.db
+db_units=./data/units_cu.db
 db_crop=./data/crop.db
 db_data=./output/incolto_cut.db
 db_data_historical=./output/incolto_cut_storico.db
