--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -3,7 +3,7 @@ name=NITRATI
 db_units=./data/units.db
 db_crop=./data/crop.db
 db_data=./output/incolto.db
-#db_data_historical=./output/incolto_storico.db
+db_data_historical=./output/incolto_storico.db
 
 [csv]  
 variable_list=./data/nitrati.csv
