--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -1,23 +1,25 @@
+[software]
+software="CriteriaOutput"
+
 [project]
 name=NITRATI
 db_units=./data/units.db
 db_crop=./data/crop.db
 db_data=./output/incolto.db
-db_data_historical=./output/incolto_storico.db
 
 [csv]  
-variable_list=./data/nitrati.csv
+variable_list=./csvOutputList/nitrati.csv
 csv_output=./output/nitrati
 add_date_to_filename = true
 
 [shapefile]
 UCM=./SHAPE/UCM/UCM.shp
-field_list=./data/nitratiToShape.csv
+field_list=./csvOutputList/nitratiToShape.csv
 
 [aggregation]
 aggregation_shape=./SHAPE/ZONE_ALLERTA/ZoneAllerta_2017.shp
 shape_field=NOME
-aggregation_list=./data/nitratiAggregation.csv
+aggregation_list=./csvOutputList/nitratiAggregation.csv
 aggregation_cellsize=100
 aggregation_output=./output/nitratiAggr.csv
 add_date_to_filename = false
