--- a/DATA/PROJECT/INCOLTO/bollAgro.ini
+++ b/DATA/PROJECT/INCOLTO/bollAgro.ini
@@ -16,3 +16,9 @@ add_date_to_filename = true
 [shapefile]
 UCM=./SHAPE/UCM/UCM.shp
 field_list=./csvOutputList/bollettinoToShape.csv
+
+[maps]
+map_list=./csvOutputList/bollettinoMaps.csv
+format=tif
+projection=EPSG:4326
+cellsize=100
