--- a/DATA/PROJECT/INCOLTO/Incolto.ini
+++ b/DATA/PROJECT/INCOLTO/Incolto.ini
@@ -9,9 +9,15 @@ db_crop=./data/crop.db
 db_soil=./data/soil_ER_2002.db
 db_units=./data/units.db
 db_output=./output/incolto.db
+db_data_historical=./output/incolto_storico.db
 firstDate=2019-01-01
+
+[shapefile]
+UCM=./SHAPE/UCM/UCM.shp
 
 [forecast]
 isSeasonalForecast=false
 isShortTermForecast=true
 daysOfForecast=7
+
+
