--- a/deploy/appimage/usr/share/applications/CRITERIA_GEO.desktop
+++ b/deploy/appimage/usr/share/applications/CRITERIA_GEO.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
-Name=CRITERIAGEO
-Comment=CRITERIAGEO
+Name=CRITERIA_GEO
+Comment=CRITERIA_GEO
 Exec=CRITERIA_GEO
 Icon=CRITERIA_GEO
 Categories=Office;
