--- a/DATA/PROJECT/INCOLTO/nitrati.ini
+++ b/DATA/PROJECT/INCOLTO/nitrati.ini
@@ -21,5 +21,5 @@ aggregation_shape=./SHAPE/ZONE_ALLERTA/ZoneAllerta_2017.shp
 shape_field=NOME
 aggregation_list=./csvOutputList/nitratiAggregation.csv
 aggregation_cellsize=100
-aggregation_output=./output/nitratiAggr.csv
+aggregation_output=./output/TabDeficitMacroAree.csv
 add_date_to_filename = false
