--- a/DATA/PROJECT/INCOLTO/deficit_macroaree.ini
+++ b/DATA/PROJECT/INCOLTO/deficit_macroaree.ini
@@ -19,6 +19,8 @@ field_list=./csvOutputList/nitratiToShape.csv
 [aggregation]
 aggregation_shape=./SHAPE/ZONE_QA/zone_QA.shp
 shape_field=idQA
+#aggregation_shape=./SHAPE/ZONE_ALLERTA/ZoneAllerta_2017.shp
+#shape_field=NOME
 aggregation_list=./csvOutputList/deficitAggregation.csv
 aggregation_cellsize=100
 aggregation_output=./nitrati/tabDeficitMacroAree.csv
