--- a/DATA/PROJECT/INCOLTO/deficit_macroaree.ini
+++ b/DATA/PROJECT/INCOLTO/deficit_macroaree.ini
@@ -6,6 +6,7 @@ name=DEFICIT MACRO AREE
 db_units=./data/units.db
 db_crop=./data/crop.db
 db_data=./output/incolto.db
+add_date_to_log = false
 
 [csv]  
 variable_list=./csvOutputList/nitrati.csv
