--- a/DATA/PROJECT/testRestart/test.ini
+++ b/DATA/PROJECT/testRestart/test.ini
@@ -11,6 +11,8 @@ db_units="./data/units.db"
 db_output="./output/test.db"
 save_state = true
 restart=true
+firstDate=1995-01-01
+
 
 [forecast]
 isSeasonalForecast=false
