--- a/DATA/PROJECT/test/test.ini
+++ b/DATA/PROJECT/test/test.ini
@@ -10,8 +10,9 @@ db_crop="./data/crop.db"
 db_units="./data/units.db"
 db_output="./output/test.db"
 save_state = true
-restart=true
-
+restart=false
+firstDate=1996-01-01
+lastDate=1996-03-03
 
 [forecast]
 isSeasonalForecast=false
