--- a/DATA/PROJECT/test/test.ini
+++ b/DATA/PROJECT/test/test.ini
@@ -10,9 +10,7 @@ db_crop="./data/crop.db"
 db_units="./data/units.db"
 db_output="./output/test.db"
 save_state = true
-restart=false
-firstDate=1996-01-01
-lastDate=1996-03-03
+restart=true
 
 [forecast]
 isSeasonalForecast=false
