--- a/DATA/PROJECT/test/test.ini
+++ b/DATA/PROJECT/test/test.ini
@@ -9,11 +9,15 @@ db_soil="./data/soil_ER_2002.db"
 db_crop="./data/crop.db"
 db_units="./data/units.db"
 db_output="./output/test.db"
-save_state=true
-restart=true
+#save_state=true
+#restart=true
 #firstDate=1995-01-01
 #lastDate=2008-12-31
 
 [forecast]
 isSeasonalForecast=false
 isShortTermForecast=false
+
+[output]
+soilMoisture=15,30,50
+waterPotential=15,30,50
