fix specific variables

--- a/DATA/PROJECT/test/test.ini
+++ b/DATA/PROJECT/test/test.ini
@@ -11,13 +11,12 @@ db_units="./data/units.db"
 db_output="./output/test.db"
 #save_state=true
 #restart=true
-#firstDate=1995-01-01
-#lastDate=2008-12-31
+firstDate=2000-01-01
 
 [forecast]
 isSeasonalForecast=false
 isShortTermForecast=false
 
 [output]
-soilMoisture=15,30,50
+waterContent=15,30,50
 waterPotential=15,30,50
