--- a/DATA/PROJECT/Ravone/Ravone.ini
+++ b/DATA/PROJECT/Ravone/Ravone.ini
@@ -15,5 +15,6 @@ isSeasonalForecast=false
 isShortTermForecast=false
 
 [output]
+waterDeficit=25,100
 waterContent=15,30,50
 waterPotential=15,30,50
