--- a/DATA/PROJECT/test/test.ini
+++ b/DATA/PROJECT/test/test.ini
@@ -4,14 +4,14 @@ software="CRITERIA1D"
 [project]
 path="./"
 name="test"
-db_meteo="./data/meteo_zattaglia.db"
+db_meteo="./data/meteo.db"
 db_soil="./data/soil_ER_2002.db"
 db_crop="./data/crop.db"
 db_units="./data/units.db"
 db_output="./output/test.db"
 #save_state=true
 #restart=true
-firstDate=2000-01-01
+#firstDate=
 
 [forecast]
 isSeasonalForecast=false
