--- a/DATA/PROJECT/test/test.ini
+++ b/DATA/PROJECT/test/test.ini
@@ -7,13 +7,12 @@ name="test"
 db_meteo="./data/meteo.db"
 db_soil="./data/soil_ER_2002.db"
 db_crop="./data/crop.db"
-db_units="./data/units.db"
+db_comp_units="./data/comp_units.db"
 db_output="./output/test.db"
-#save_state=true
-#restart=true
 
 [forecast]
 isSeasonalForecast=false
+idMonthlyForecast=false
 isShortTermForecast=false
 
 [output]
