upload of SPC case

--- a/DATA/PROJECT/SPC/SPC.ini
+++ b/DATA/PROJECT/SPC/SPC.ini
@@ -9,3 +9,6 @@ db_meteo=./data/meteo.db
 db_crop=./data/crop.db
 db_comp_units=./data/comp_units.db
 db_output=./output/SPC.db
+
+[output]
+waterContent=10,25,45,70,100,135,180
