--- a/.github/workflows/build-ubuntu-xenial.yml
+++ b/.github/workflows/build-ubuntu-xenial.yml
@@ -12,8 +12,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: docker run -v ${{ github.workspace }}:/root/src/ -w /root/src/ ${{ matrix.image }} /bin/bash .travis-build.sh ${{ matrix.image }}
+      - name: Check tag
+        id: check-tag
+        run: |
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9][0-9.]*$ ]]
+          then
+              echo "match=true" >> $GITHUB_OUTPUT
+          fi
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/v') && matrix.image == 'ubuntu:xenial'
+        if: steps.check-tag.outputs.match == 'true'
         with:
           files: '*AppImage*'
