factor of safety

--- a/DATA/PROJECT/montue/montue.ini
+++ b/DATA/PROJECT/montue/montue.ini
@@ -15,4 +15,4 @@ db_output=./output/montue.db
 [output]
 waterContent=20,40,60,100,120,140
 waterPotential=20,60,120
-slopeStability=20,60,100,120
+factorOfSafety=20,60,100,120
